[package]
name = "afire_compress"
version = "0.1.0"
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2021"

repository = "https://github.com/Basicprogrammer10/afire-compress"
documentation = "https://docs.rs/afire_compress"
description = "🦄 afire middleware to compress outgoing HTTP traffic"
keywords = ["http", "middleware", "compression", "afire"]
categories = ["network-programming", "web-programming::http-server"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
afire = "0.3.0"

libflate = "1.1.2"
brotli2 = "0.3.2"
flate2 = "1.0.22"

[dev-dependencies]
afire = "0.3.0"
